fixed horizontal scrollbar issue

--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@
 .santa-hat {
   position: absolute;
   z-index: 2;
-  top: -20px;
+  top: -10px;
   left: -17px;
   transform: rotate(-12deg);
 }
@@ -219,8 +219,8 @@
   background-position: top;
   background-origin: border-box;
   background-size: cover;
-  height: 85vh;
-  width: 100vw;
+  height: 100vh;
+  width: 100%;
   margin: none;
   color: rgba(233, 241, 250, 0.964);
   display: flex;
@@ -299,7 +299,7 @@
 /* end of svg divider */
 
 #section2 {
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -328,7 +328,7 @@
 }
 
 .projectcontent {
-  max-width: 670px;
+  max-width: 680px;
   font-weight: 400;
   color: #151a25c7;
   font-size: 17px;
